# CC4102

./: .gitignore  README.md
Tarea1/: CMakeLists.txt  README.md  boyermoore.c  boyermoore.h  brute_force.c  brute_force.h  generator.c  generator.h  generator_main.c  generator_main.h  kmp.c  kmp.h  main.c  main.h
Tarea2/: CMakeLists.txt  btree.c  btree.h  ext_hashing.c  ext_hashing.h  generator.c  hash.c  hash.h  lin_hashing.c  lin_hashing.h  main.c  main.h
Tarea3/: experiments  ordered_input_delete_universe1.csv  ordered_input_delete_universe2.csv  random_input_delete_universe1.csv  random_input_delete_universe2.csv  search_existent_universe1.csv  search_existent_universe2.csv  search_oneelement_universe1.csv  search_oneelement_universe2.csv  search_random_universe1.csv  search_random_universe2.csv
Tarea3/src/cc4102/tarea3/olguin_romero/: AVL.java  AVLTree.java  BST.java  BinarySearchTree.java  INode.java  Main.java  Node.java  SplayTree.java  TestInputGenerator.java  Tests.java  Tree.java  VEBTree.java
Tarea3/src/cc4102/tarea3/tests/: AVLTest.java  AVLTreeTest.java  BSTTest.java  SplayTest.java  SplayTreeTest.java  TreeTest.java  VEBTreeTest.java
